# CPP_for_CP

./: !!TESTCASE_GEN.cpp  .clang-format  CMakeLists.txt  LICENSE  Modint  Modint.cpp  NOTE.txt  README.md  compile_commands.json  config.yaml  cpp.json  stdc++.h  stdcpp.h
